--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Report new extension version published on Chrome Web Store",
   "version": "0.0.1",
   "homepage": "https://github.com/ZenHubIO/chromepet",
-  "keywords": ["chrome", "extension"],
+  "keywords": [
+    "chrome",
+    "extension"
+  ],
   "bin": {
     "chromepet": "./bin/chromepet.js"
   },
@@ -21,7 +24,8 @@
   "dependencies": {
     "cheerio": "^0.18.0",
     "node-slack": "0.0.5",
-    "request": "^2.47.0"
+    "request": "^2.47.0",
+    "underscore": "^1.7.0"
   },
   "license": "MIT"
 }
